--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,6 @@
 
 .debug main section .box {
   height: 300px;
- 
 }
 
 /*Header*/
@@ -63,10 +62,36 @@ header .bar-container {
 }
 
 .container-2 {
-    display: flex;
-    justify-content: center;
-    width: 800px;
-    margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  width: 800px;
+  margin: 0 auto;
+}
+
+.container-3 {
+  display: flex;
+  height: 500px;
+  justify-content: center;
+  width: 800px;
+  margin: 0 auto;
+  padding-top: 5px;
+  padding-bottom: 10px;
+}
+
+.container-4 {
+  display: flex;
+  height: 100px;
+  border-top: 2px solid #808080;
+  border-bottom: 2px solid #808080;
+}
+
+.button-container {
+  background-color: #7fffd4;
+  width: 800px;
+  margin: 30px auto 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 /*section*/
@@ -77,37 +102,66 @@ main > section {
 }
 
 .box-1 {
-    flex-basis: 700px;
-    height: 300px;
-    background-color: #ee82ee;
+  flex-basis: 700px;
+  height: 300px;
+  background-color: #ee82ee;
 }
 
 .big-box {
-    background-color: #1e90ff;
-    height: 300px;
-    flex-grow: 2;
+  background-color: #1e90ff;
+  height: 300px;
+  flex-grow: 2;
 }
 
 .small-box {
-    background-color: #ffc0cb;
-    height: 300px;
-    flex-grow: 1;
+  background-color: #ffc0cb;
+  height: 300px;
+  flex-grow: 1;
 }
 
 .first {
-    order: 1;
+  order: 1;
 }
 
 .second {
-    order: 2;
+  order: 2;
 }
 
 .box-2 {
-    background-color: #228b22;
-    height: 700px;
-    flex-grow: 1;
+  background-color: #228b22;
+  height: 700px;
+  flex-grow: 1;
 }
 
+/*footer*/
+
+footer {
+  display: flex;
+  flex-direction: column;
+}
+
+.left-footer {
+  background-color: #f08080;
+  flex-grow: 1;
+}
+
+.right-footer {
+  display: flex;
+  background-color: #20b2aa;
+  flex-grow: 2;
+  flex-direction: row;
+}
+
+.micro-layout {
+  border: 2px dashed #ffffff;
+  flex-grow: 1;
+}
+
+.logo-2,
+.bottone {
+  background-color: #ffb6c1;
+  padding: 4px;
+}
 
 .bg-blue {
   background-color: #00008b;
@@ -119,4 +173,8 @@ main > section {
 
 .bg-gray {
   background-color: #d3d3d3;
+}
+
+.bg-black {
+  background-color: #23272a;
 }
